// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registry Breadcrumb when is not rootRoute renders 1`] = `
<nav
  aria-label="Breadcrumb"
  class="gl-breadcrumbs"
  style=""
>
  <ol
    class="breadcrumb gl-breadcrumb-list"
  >
    <li
      class="gl-breadcrumb-item gl-breadcrumb-item-sm"
    >
      <a
        target="_self"
      >
        <span
          class="gl-align-middle"
        >
          mock name
        </span>
      </a>
    </li>
    <li
      class="gl-breadcrumb-item gl-breadcrumb-item-sm"
    >
      <a
        aria-current="page"
        href="#"
        target="_self"
      >
        <span
          class="gl-align-middle"
        >
          mock name
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Registry Breadcrumb when is rootRoute renders 1`] = `
<nav
  aria-label="Breadcrumb"
  class="gl-breadcrumbs"
  style=""
>
  <ol
    class="breadcrumb gl-breadcrumb-list"
  >
    <li
      class="gl-breadcrumb-item gl-breadcrumb-item-sm"
      style="flex-shrink: 1; text-overflow: ellipsis; overflow-x: hidden; text-wrap: nowrap;"
    >
      <a
        aria-current="page"
        target="_self"
      >
        <span
          class="gl-align-middle"
        >
          mock name
        </span>
      </a>
    </li>
  </ol>
</nav>
`;
